# HiLow

./: .STATUS.md.swp  .hilow-development-roadmap.md.kate-swp  CLAUDE.md  Cargo.toml  FINAL_SESSION_SUMMARY.md  README.md  STATUS.md  hilow-design.md  hilow-development-roadmap.md  test-examples.sh
examples/: arithmetic  arithmetic.hl  array_functional  array_functional.hl  array_methods_final  array_methods_final.hl  array_print  array_print.hl  array_search  array_search.hl  array_test  array_test.hl  break_continue  break_continue.hl  bubble_sort  bubble_sort.hl  calculator  calculator.hl  closure_counter  closure_counter.hl  closure_test  closure_test.c  closure_test.hl  compound_array  compound_array.hl  compound_assign  compound_assign.hl  csv_processor.hl  csv_simple.c  csv_simple.hl  defer_return  defer_return.hl  defer_simple  defer_simple.hl  defer_test  defer_test.hl  dynamic_array  dynamic_array.hl  export_test  export_test.hl  (+101 more)
illustrations/: README.md  calculator  calculator.hl  config_parser  config_parser.hl  csv_parser  csv_parser.hl
src/: main.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
