[package]
name = "hilowc"
version = "0.1.0"
edition = "2021"
authors = ["HiLow Contributors"]
description = "The HiLow programming language compiler"

[[bin]]
name = "hilowc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
